Adding option to use background-imager.js. Setting up admin form, altering output based on plugin, and checking that the plugin is found in the libraries folder before rendering image.

--- a/css/background-imager-js.css
+++ b/css/background-imager-js.css
@@ -7,3 +7,9 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+.drupal-bg-imager-js .drupal-imager-js-noscript-img {
+  display: block;
+  position: absolute;
+  max-width: 100%;
+  height: auto;
+}
